<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/title_activity_first_thing"
        android:id="@+id/firstThingBtn"
        android:layout_weight="1"
        android:onClick="launchFirstThing"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/title_activity_second_thing"
        android:id="@+id/secondThingBtn"
        android:layout_weight="1"
        android:onClick="launchSecondThing"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/title_activity_third_thing"
        android:id="@+id/thirdThingBtn"
        android:layout_weight="1"
        android:onClick="launchThirdThing"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/title_activity_fourth_thing"
        android:id="@+id/fourthThingBtn"
        android:layout_weight="1"
        android:onClick="launchFourthThing"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/title_activity_fifth_thing"
        android:id="@+id/fifthThingBtn"
        android:layout_weight="1"
        android:onClick="launchFifthThing"
        />
</LinearLayout>
